移植我的 .emacs.d 配置到 .spacemacs.d 中

--- a/layers/hero-layer/README.org
+++ b/layers/hero-layer/README.org
@@ -10,9 +10,8 @@
 - [[#key-bindings][Key bindings]]
 
 * Description
-This layer does wonderful things:
-  - thing01
-
+  My config
+  - Open file in one emacs process.(in windows should add a environment variable ALTERNATE_EDITOR)
 * Install
 To use this configuration layer, add it to your =~/.spacemacs=. You will need to
 add =hero-layer= to the existing =dotspacemacs-configuration-layers= list in this
@@ -20,9 +19,9 @@ file.
 
 * Key bindings
 
-| Key Binding | Description    |
-|-------------+----------------|
-| ~SPC x x x~ | Does thing01   |
+| Key Binding | Description                              |
+|-------------+------------------------------------------|
+| ~C-e~       | Evil normal mode move cursor to line end |
 # Use GitHub URLs if you wish to link a Spacemacs documentation file or its heading.
 # Examples:
 # [[https://github.com/syl20bnr/spacemacs/blob/master/doc/VIMUSERS.org#sessions]]
